examples/negative/diagnostic_quality/missing_variant_help.kai
# Diagnostic quality (#520 / category 7): a non-exhaustive
# match must (a) name the missing variant, (b) list the
# covered variants, and (c) suggest a fix (add an arm or use
# a wildcard). All three must appear in the diagnostic body.

type Color = Red | Green | Blue

fn name(c: Color) : Int = match c {
  Red -> 1
  Green -> 2
}

fn main() : Int = name(Red)
