examples/negative/diagnostic_quality/missing_variant_help.diag.expected
error: non-exhaustive match
missing_variant_help.kai:8
missing variant: `Blue`
covered: Green, Red
add an arm
